--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
     <div class="grid">
         <div class="grid-result"><span id="display">0</span></div>
-        <div class="grid-operation" id="a-c">A / C</div>
+        <div id="a-c">A / C</div>
         <div class="grid-blank"></div>
         <div class="grid-blank"></div>
-        <div class="grid-operation">/</div>
+        <div class="grid-operation" id="divide">/</div>
         <div class="grid-number" id="seven">7</div>
         <div class="grid-number" id="8">8</div>
         <div class="grid-number" id="9">9</div>
-        <div class="grid-operation">x</div>
+        <div class="grid-operation" id="multiply">x</div>
         <div class="grid-number" id="4">4</div>
         <div class="grid-number" id="5">5</div>
         <div class="grid-number" id="6">6</div>
-        <div class="grid-operation">-</div>
+        <div class="grid-operation" id="subtract">-</div>
         <div class="grid-number" id="1">1</div>
         <div class="grid-number" id="2">2</div>
         <div class="grid-number" id="3">3</div>
         <div class="grid-number" id="0">0</div>
         <div class="grid-number" id="decimal">.</div>
         <div class="grid-operation" id="equal">=</div>
-        <div class="grid-operation" id="plus">+</div>
+        <div class="grid-operation" id="add">+</div>
     </div>
 
     <footer>
