Working calculator with decimal functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="grid-blank"></div>
         <div class="grid-blank"></div>
         <div class="grid-operation" id="divide">/</div>
-        <div class="grid-number" id="seven">7</div>
+        <div class="grid-number" id="7">7</div>
         <div class="grid-number" id="8">8</div>
         <div class="grid-number" id="9">9</div>
         <div class="grid-operation" id="multiply">x</div>
